# WallpaperChanger

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CommandLineOptionException.cpp  CommandLineOptionException.h  DesktopSession.cpp  DesktopSession.h  Driver.cpp  Driver.h  LxdeSwitcher.cpp  LxdeSwitcher.h  Switcher.cpp  Switcher.h  SwitcherException.cpp  SwitcherException.h  SystemCommandException.cpp  SystemCommandException.h  UnknownSessionException.cpp  UnknownSessionException.h  Utility.cpp  Utility.h  Wallpaper.cpp  Wallpaper.h  XfceSwitcher.cpp  XfceSwitcher.h  main.cpp
